Time: 7 ms (38.15%), Space: 48.5 MB (37.52%) - LeetHub